Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.59
	* Hungarian translation added (Thanks, Sutto Zoltan)
	* Squashed a bug in buddy right-click menu handling
	  that crashed Gaim.  In the process: found and
	  eliminated some memory leaks.
	* Fixed a significant applet leak
	* Can now change Jabber password on server (Thanks,
	  Nathan Walp)

version 0.58 (05/13/2002):
	* Bulgarian translation added (Thanks, Igel Itzo)
	* Taiwanese translation added (Thanks, Paladin Liu)
	* Better applet transparency
	* Option to raise buddy list on signons/signoffs
	* Formatting of incoming MSN messages	
	* Get Info from menu multiple-account-aware (thanks
	  Brian Bernas)
	* Hide and unhide functions for the filectl plugin.
	  (Thanks, Ari Pollak)
	* Added helpful stuff to the Help menu.
	* Self-aliasing from the account editor.
	* Better selection in GtkIMHtml (Thanks Ben Miller)
	* A warning when your OSCAR buddy list is too long
	  (Thanks, Mark Doliner)
	* ICQ status messages in OSCAR (Thanks, Mark Doliner)
	* Play sound when your name is said in a chat
	* Approval dialog for Jabber when somebody wants to
	  subscribe to user's presence. Also gives user the
	  opportunity to add that buddy if not already on the
	  user's buddy list.
	* Jabber "Change buddy group" roster synchronization now
	  works again.  (This was unknowingly broken when the
	  "out-sourced" Jabber libs were upgraded in 0.56)
	* Invalid Jabber I.D.'s no longer crash Gaim.  User now
	  notified with pop-up's.
	* Jabber Buddy sign-on time support, added in 0.57,
	  removed until and unless and inconsistency can be
	  resolved. (Thanks, Nathan Walp)
	* Bug-fix for potential buffer overflow in Jabber
	  plugin. (Thanks, rwscott)
	* Tempfiles used for secure MSN/HotMail login (added in
	  0.57) are now themselves created securely.
	* Secure MSN logins (added in 0.57) no longer blow up
	  on Solaris.
	* Timezone support improved.

version 0.57 (04/25/2002):